app/assets/stylesheets/app.scss
/*
 *= require toastr
 */

@import 'bootstrap';

$gray: $gray-900;
$gray-light: $gray-500;
$gray-lighter: $gray-400;
$brand-primary: $primary;
$brand-success: $success;
$brand-danger: $danger;


html {
  height: 100%;
}

body {
  height: 100%;
  font-size: 14px;
  font-family:
    'Open Sans',
    helvetica,
    arial,
    'hiragino kaku gothic pro',
    meiryo,
    'ms pgothic',
    sans-serif;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;

  &.prevent-scroll {
    position: fixed;
    overflow: hidden;
    width: 100%;
    height: 100%;
  }
}

.container {
  width: 970px;
  max-width: none !important;
}

@import 'app/common/variables';
@import 'app/common/keyframes';
@import 'app/helpers/*';
@import 'app/modules/**/*';

